<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.santoshdevadiga.sampleapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.santoshdevadiga.sampleapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.santoshdevadiga.sampleapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.dashboard.DashboardFragment"
        android:label="@string/label_dashboard"
        tools:layout="@layout/fragment_dashboard"
        >
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.setting.SettingFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.Login.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login"

        >
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.Registration.RegistrationFragment"
        android:label="@string/label_registration"
        tools:layout="@layout/fragment_registration" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.splash.SplashFragment"
        android:label="@string/label_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <dialog
        android:id="@+id/bottomSheetDialogFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.dialogs.BottomSheetDialogFragment"
        android:label="@string/label_bottomsheetdialog"
        tools:layout="@layout/fragment_bottom_sheet_dialog_list_dialog" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.listing.list.ListFragment"
        android:label="@string/label_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.santoshdevadiga.sampleapp.ui.listing.detail.DetailFragment"
        android:label="@string/label_detail"
        tools:layout="@layout/fragment_detail" >
    </fragment>


</navigation>